--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div class="wrapper">
     <span></span>
-    <div style="max-width: 100%; padding: 10px 0;">
+    <div style="width: 680px; max-width: 100%; padding: 10px 0;">
         <div id="skyeng-special"></div>
     </div>
 </div>
@@ -59,7 +59,7 @@
       };
     }
     d.body.appendChild(s);
-  })(document, 1);
+  })(document, 2);
 </script>
 
 </body>
